--- a/resultado.html
+++ b/resultado.html
@@ -8,7 +8,6 @@
     <link rel="shortcut icon" type="imagex/png" href="/assets/img/Logo Azul escurop.png"/>
     <link rel="stylesheet" href="./assets/css/style.css"/>
   </head>
-
   <body>
     <header class="header">
       <nav>
@@ -21,7 +20,6 @@
         <a href="/index.html">Início</a>
       </nav>  
     </header> 
-
     <div class="section4">
       <div class="contentsection4">
         <div class="section4text">
@@ -33,7 +31,6 @@
         <img src="./assets/img/resultados.png" />
       </div>
     </div>
-
     <div class="section2">
       <div class="contentsection2">
         <div class="card">
@@ -45,7 +42,6 @@
             O desenvolvedor full stack é capaz de trabalhar com toda a pilha de desenvolvimento de um projeto. Além de conseguir atuar com o font-end e o back-end, esse profissional também pode contribuir em todas as etapas e partes de um sistema, como o servidor e o banco de dados.
           </p>
         </div>
-
         <div class="card">
           <img src="/assets/img/UX.png">
           <h2>
@@ -55,7 +51,6 @@
             É o profissional responsável pela estética de uma plataforma digital, com o objetivo de proporcionar uma melhor experiência ao usuário, baseada em seu comportamento, seja por meio da usabilidade, utilidade ou conveniência oferecidas na interação com o produto.
           </p>
         </div>
-
         <div class="card">
           <img src="/assets/img/Marketing.png">
           <h2>
@@ -65,7 +60,6 @@
             Atua na criação, desenvolvimento e análise de testes para melhorias contínuas do processo de um negócio. Seu principal objetivo é fazer com que a empresa cresça cada vez mais, otimizando os recursos existentes e sem precisar investir em extras.
           </p>
         </div>
-
         <div class="card">
           <img src="/assets/img/sales.png">
           <h2>
@@ -77,16 +71,13 @@
         </div>
       </div>
     </div>
-
     <div class="section5">
       <a href="/testevocacional2.html"><button class="btnsection5">Novo teste</button></a>
       <a href=" "><button class="btnsection5">Compartilhar</button></a>
     </div>
-
     <div class="section6">
       <h1>Confira os cursos que podem te ajudar!</h1>
     </div>
-
     <div class="section7">
       <div class="content7">
         <h1>GAMA ACADEMY</h1>
@@ -96,7 +87,7 @@
     <div class="section8">
       <div class="contentsection8">
         <div class="card8">
-          <img src="./assets/img/gama-DEV.png">
+          <a href="https://www.gama.academy/gama-experience/desenvolvimento-full-stack"><img src="./assets/img/gama-DEV.png"></a>
           <h2>
             Dev Fullstack
           </h2>
@@ -104,9 +95,8 @@
             Dev Full Stack é a pessoa capaz de entregar softwares do início ao fim.
           </p>
         </div>
-
         <div class="card8">
-          <img src="./assets/img/gama-UX.png">
+          <a href="https://www.gama.academy/gama-experience/product-design"><img src="./assets/img/gama-UX.png"></a>
           <h2>
             Product Designer
           </h2>
@@ -114,9 +104,8 @@
             Product Designer é a pessoa responsável por realizar tanto atividades de User Experience (UX) quanto User Interface (UI).
           </p>
         </div>
-
         <div class="card8">
-          <img src="./assets/img/gama-MKT.png">
+          <a href="https://www.gama.academy/gama-experience/growth-marketing"><img src="./assets/img/gama-MKT.png"></a>
           <h2>
             Growth Marketing
           </h2>
@@ -124,9 +113,8 @@
             Growth Hacker é o profissional de marketing digital orientado a experimentos dentro da empresa.
           </p>
         </div>
-
         <div class="card8">
-          <img src="./assets/img/gama-Vendas.png">
+          <a href="https://www.gama.academy/gama-experience/inside-sales-neo"><img src="./assets/img/gama-Vendas.png"></a>
           <h2>
             Inside Sales
           </h2>
@@ -136,21 +124,18 @@
         </div>
       </div>
     </div>
-
     <div class="section9">
       <h1>Confira alguns livros excelentes de cada área!</h1>
     </div>
-
     <div class="section10">
       <div class="content10">
         <h1>Dev Fullstack</h1>
       </div>
     </div>
-
     <div class="section11">
       <div class="contentsection11">
         <div class="card11">
-          <img src="./assets/img/Livro dev 3.jpg">
+          <a href="https://www.amazon.com.br/gp/product/8576082675/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=brasilcode-20&creative=9325&linkCode=as2&creativeASIN=8576082675&linkId=5ed30a26e20dabd5790c6e1ce16a6cff"><img src="./assets/img/Livro dev 3.jpg"></a>
           <h2>
             Código limpo: Habilidades práticas do Agile Software
           </h2>
@@ -159,7 +144,7 @@
           </p>
         </div>
         <div class="card11">
-          <img src="./assets/img/Livro dev 2.jpg">
+          <a href="https://www.amazon.com.br/gp/product/8576081741/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=brasilcode-20&creative=9325&linkCode=as2&creativeASIN=8576081741&linkId=1cd2e10cf484270f4e5da209640373ca"><img src="./assets/img/Livro dev 2.jpg"></a>
           <h2>
             Use a cabeça!: padrões de projetos
           </h2>
@@ -168,7 +153,7 @@
           </p>
         </div>
         <div class="card11">
-          <img src="./assets/img/Livro Dev 1.jpg">
+          <a href="https://www.amazon.com.br/gp/product/8521603789/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=brasilcode-20&creative=9325&linkCode=as2&creativeASIN=8521603789&linkId=de7ae6d0be7d6ed599eee6939bbbe890"><img src="./assets/img/Livro Dev 1.jpg"></a>
           <h2>
             Algoritmos e Estruturas de Dados
           </h2>
@@ -178,17 +163,15 @@
         </div>
       </div>
     </div>
-
     <div class="section12">
       <div class="content12">
         <h1>Inside Sales</h1>
       </div>
     </div>
-
     <div class="section13">
       <div class="contentsection13">
         <div class="card13">
-          <img src="./assets/img/Livro sales 2.jpg">
+          <a href="https://www.amazon.com.br/Never-Split-Difference-Negotiating-Depended-ebook/dp/B014DUR7L2?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=Never+Split+the+Difference&qid=1529592120&sr=1-1&ref=sr_1_1"><img src="./assets/img/Livro sales 2.jpg"></a>
           <h2>
             Never Split the Difference: Negotiating As If Your Life Depended On It (English Edition)
           </h2>
@@ -197,7 +180,7 @@
           </p>
         </div>
         <div class="card13">
-          <img src="./assets/img/Livro sales 1.jpg">
+          <a href="https://www.amazon.com.br/gp/product/8576800608/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&tag=estudevendas-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=8576800608&linkId=6c825a1cc47ea9233e74e555933d8b78"><img src="./assets/img/Livro sales 1.jpg"></a>
           <h2>
             Alcançando Excelência em Vendas - Spin Selling
           </h2>
@@ -206,7 +189,7 @@
           </p>
         </div>
         <div class="card13">
-          <img src="./assets/img/Livro sales 3.jpg">
+          <a href="https://www.amazon.com.br/Sandler-Rules-Timeless-Selling-Principles-ebook/dp/B0033WSW7K?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=The+Sandler+Rules&qid=1529591397&sr=1-1-catcorr&ref=sr_1_1"><img src="./assets/img/Livro sales 3.jpg"></a>
           <h2>
             The Sandler Rules: 49 Timeless Selling Principles and How to Apply Them (English Edition)
           </h2>
@@ -216,17 +199,15 @@
         </div>
       </div>
     </div>
-    
     <div class="section14">
       <div class="content14">
         <h1>Product Design</h1>
       </div>
     </div>
-
     <div class="section15">
       <div class="contentsection15">
         <div class="card15">
-          <img src="./assets/img/Livro 1 UX.jpg">
+          <a href="https://www.amazon.com.br/Sprint-M%C3%A9todo-Google-Testar-Aplicar/dp/8551001523/ref=sr_1_2_sspa?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=uX&qid=1638368917&sr=8-2-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFHNTdPUDlRME9QNzgmZW5jcnlwdGVkSWQ9QTAyNDA2NTkxT0JDVlc1UzQ4NlRDJmVuY3J5cHRlZEFkSWQ9QTA3ODc5NzEzVDZOTjBYQ0xOR1NLJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ=="><img src="./assets/img/Livro 1 UX.jpg"></a>
           <h2>
             Sprint. O Método Usado no Google Para Testar e Aplicar Novas Ideias em Apenas Cinco Dias
           </h2>
@@ -235,7 +216,7 @@
           </p>
         </div>
         <div class="card15">
-          <img src="./assets/img/Livro UX 2.png">
+          <a href="https://www.amazon.com.br/Design-do-Dia/dp/8532520839/ref=sr_1_11?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=uX&qid=1638368917&sr=8-11"><img src="./assets/img/Livro UX 2.png"></a>
           <h2>
             O design do dia a dia
           </h2>
@@ -244,7 +225,7 @@
           </p>
         </div>
         <div class="card15">
-          <img src="./assets/img/Livro UX 3.jpg">
+          <a href="https://www.amazon.com.br/N%C3%A3o-fa%C3%A7a-pensar-Steve-Krug/dp/8576088509/ref=sr_1_10?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=uX&qid=1638368917&sr=8-10"><img src="./assets/img/Livro UX 3.jpg"></a>
           <h2>
             Não me faça pensar: atualizado
           </h2>
@@ -262,7 +243,7 @@
     <div class="section17">
       <div class="contentsection17">
         <div class="card17">
-          <img src="./assets/img/Livro MKT 1.jpg">
+          <a href="https://www.amazon.com.br/gp/product/8575428098/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=8575428098&linkCode=as2&tag=danoliveiras-20&linkId=cdb692fe9710b9799b27e35906cdc5c8"><img src="./assets/img/Livro MKT 1.jpg"></a>
           <h2>
             As armas da persuasão
           </h2>
@@ -271,7 +252,7 @@
           </p>
         </div>
         <div class="card17">
-          <img src="./assets/img/Livro MKT 2.jpg">
+          <a href="https://www.amazon.com.br/gp/product/0062292986/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0062292986&linkCode=as2&tag=danoliveiras-20&linkId=2b980e89f833c2bdefbb70c6075b24a8"><img src="./assets/img/Livro MKT 2.jpg"></a>
           <h2>
             Crossing the Chasm, 3rd Edition: Marketing and Selling Disruptive Products to Mainstream Customers
           </h2>
@@ -280,7 +261,7 @@
           </p>
         </div>
         <div class="card17">
-          <img src="./assets/img/Livro MKT 3.jpg">
+          <a href="https://www.amazon.com.br/gp/product/0195573560/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0195573560&linkCode=as2&tag=danoliveiras-20&linkId=1ee0b49e51db3f17ad381f19b7d5cae9"><img src="./assets/img/Livro MKT 3.jpg"></a>
           <h2>
             How Brands Grow: What Marketers Don't Know
           </h2>
